--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,15 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  get_it: ^8.2.0
+  injectable: ^2.5.2
 
 dev_dependencies:
+  build_runner: ^2.9.0
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  injectable_generator: ^2.9.0
 
 flutter:
   uses-material-design: true
