--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   get_it: ^8.2.0
   injectable: ^2.5.2
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   build_runner: ^2.9.0
@@ -36,3 +37,6 @@ flutter:
           weight: 500
         - asset: assets/fonts/sf_pro_text/SFProText-Bold.ttf
           weight: 700
+    - family: CustomIcons
+      fonts:
+        - asset: assets/fonts/CustomIcons.ttf
